# Smell-Diffusion-Generator

./: .dockerignore  .pre-commit-config.yaml  =0.11.0  =0.18.0  =0.21.0  =4.0.0  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTIVE_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_DOCUMENTATION.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  GITHUB_SETUP.md  PRODUCTION_DEPLOYMENT.md  README.md  RESEARCH_BREAKTHROUGH_SUMMARY.md  RESEARCH_DOCUMENTATION.md  RESEARCH_PAPER_DRAFT.md  RESEARCH_PUBLICATION_DRAFT.md  SECURITY.md  advanced_autonomous_testing.py  advanced_quality_gates.py  autonomous_error_recovery.py  autonomous_quality_validator.py  autonomous_sdlc_executor.py  autonomous_security_hardening.py  autonomous_test_report.json  deploy.sh  docker-compose.production.yml  docker-compose.yml  final_system_test.py  global_autonomous_framework.py  global_deployment_report.json  gunicorn.conf.py  mock_deps.py  mock_deps_simple.py  pyproject.toml  quality_validation_report.json  (+7 more)
.github/workflows/: ci.yml
deployment/: production_config.py
examples/: quick_start_demo.py  revolutionary_research_demo.py
scripts/: basic_demo.py  demo_system.py  run_quality_checks.sh
smell_diffusion/: __init__.py  cli.py
smell_diffusion/api/: __init__.py  server.py
smell_diffusion/compliance/: __init__.py  global_compliance.py
smell_diffusion/core/: __init__.py  molecule.py  smell_diffusion.py
smell_diffusion/design/: __init__.py  accord.py
smell_diffusion/editing/: __init__.py  editor.py
smell_diffusion/monitoring/: __init__.py  advanced_alerting.py
smell_diffusion/multimodal/: __init__.py  generator.py
smell_diffusion/optimization/: __init__.py  self_learning.py
smell_diffusion/research/: __init__.py  academic_benchmarking.py  advanced_contrastive_learning.py  breakthrough_diffusion.py  contrastive_multimodal.py  experimental_validation.py  neural_architecture_search.py  quantum_enhanced_generation.py  quantum_molecular_generation.py  research_orchestrator.py  revolutionary_meta_learning.py  sustainable_molecular_design.py  uncertainty_quantification.py  universal_molecular_transformer.py
smell_diffusion/safety/: __init__.py  evaluator.py
smell_diffusion/scaling/: __init__.py  advanced_scaling.py  concurrent_processor.py  distributed_generation.py
smell_diffusion/security/: __init__.py  security_scanner.py
smell_diffusion/translations/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  ru.json  zh.json
smell_diffusion/utils/: __init__.py  async_utils.py  async_utils.py.backup  caching.py  config.py  error_recovery.py  health_monitoring.py  i18n.py  logging.py  monitoring.py  performance_optimizer.py  validation.py
src/smell_diffusion/: __init__.py  diffusion.py  fragrance_notes.py  generator.py  molecule.py  safety.py  text_conditioner.py
tests/: __init__.py  conftest.py  test_api.py  test_contrastive_learning.py  test_core.py  test_generation_3_system.py  test_integration.py  test_quantum_generation.py  test_safety.py  test_smell_diffusion.py  test_utils.py
workflows/: ci.yml
