[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smell-diffusion"
version = "0.1.0"
authors = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.ai"},
]
description = "Cross-modal diffusion model that generates odorant molecules from text descriptions"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["diffusion", "chemistry", "fragrance", "ai", "molecules", "smell"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.21.0",
    "rdkit-pypi>=2022.9.1",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pillow>=8.3.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "pydantic>=1.10.0",
    "typer>=0.7.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
viz = [
    "py3Dmol>=2.0.0",
    "plotly>=5.10.0",
    "ipywidgets>=8.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]
chem = [
    "mordred>=1.2.0",
    "selfies>=2.1.0",
    "deepchem>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/danieleschmidt/Smell-Diffusion-Generator"
Documentation = "https://smell-diffusion.readthedocs.io"
Repository = "https://github.com/danieleschmidt/Smell-Diffusion-Generator"
"Bug Tracker" = "https://github.com/danieleschmidt/Smell-Diffusion-Generator/issues"

[project.scripts]
smell-diffusion = "smell_diffusion.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["smell_diffusion*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=smell_diffusion --cov-report=term-missing --cov-report=html"